# convex_hull_of_intersections

./: CMakeLists.txt  README.md
doc/: input.1.txt  output.1.txt
include/: ConvexHull.h  ConvexHullHelpers.h  InputParser.h  Intersections.h  OutputWriter.h  PolygonArea.h  ShapeStorage.h  Shapes.h
lib/: ConvexHull.cpp  InputParser.cpp  Intersections.cpp  OutputWriter.cpp  PolygonArea.cpp  ShapeStorage.cpp  Shapes.cpp
script/: compare.sh  show.py  system_test.sh
test/: system_test.sh  test_Circle.cpp  test_ConvexHull.cpp  test_Intersections.cpp  test_Line.cpp  test_LineSegment.cpp  test_PolygonArea.cpp  test_intersect_circles.cpp  test_intersect_line_and_circe.cpp  test_intersect_two_lines.cpp  test_main.cpp  test_performance.cpp  test_static.cpp  unit_test.cpp  unit_test.h
